Assets/Plugins/Tools/Stanley script/Grammars/StanleyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /SSD1/Repositories/Unity/Heretical Solutions/Stanley Script Unity/Assets/Scripts/Stanley script/Grammars/StanleyParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace HereticalSolutions.StanleyScript.Grammars {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class StanleyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SPACE=1, COMMENT=2, COMMENT_INPUT=3, LINE_COMMENT=4, REFER_TO=5, STORY=6, 
		SHOULD_BE=7, A=8, THE=9, AND=10, AT=11, AS=12, OF=13, TO=14, HAD=15, HAS=16, 
		HAVE=17, PASSED=18, WAS=19, WERE=20, CLOSIEST=21, FURTHEST=22, RANDOM=23, 
		STRONGEST=24, UNIQUE=25, WEAKEST=26, MINUTES=27, SECONDS=28, STAR=29, 
		DIVIDE=30, MODULE=31, PLUS=32, MINUS=33, EQUAL_SYMBOL=34, GREATER_SYMBOL=35, 
		LESS_SYMBOL=36, EXCLAMATION_SYMBOL=37, DOT=38, LR_BRACKET=39, RR_BRACKET=40, 
		COMMA=41, SEMI=42, AT_SIGN=43, ZERO_DECIMAL=44, ONE_DECIMAL=45, TWO_DECIMAL=46, 
		SINGLE_QUOTE_SYMB=47, DOUBLE_QUOTE_SYMB=48, REVERSE_QUOTE_SYMB=49, COLON_SYMB=50, 
		DOLLAR_SYMB=51, STRING_LITERAL=52, DECIMAL_LITERAL=53, REAL_LITERAL=54, 
		ID=55, REVERSE_QUOTE_ID=56, ERROR_RECONGNIGION=57;
	public const int
		RULE_script = 0, RULE_storyHeader = 1, RULE_statement = 2, RULE_defineStatement = 3, 
		RULE_defineSubject = 4, RULE_commandStatement = 5, RULE_timeStatement = 6, 
		RULE_actionStatement = 7, RULE_actionExpression = 8, RULE_actionWithArguments = 9, 
		RULE_objectArgument = 10, RULE_pluralSubjectsExpression = 11, RULE_subjectExpression = 12, 
		RULE_selectedSubject = 13, RULE_subjectSelectedByQuality = 14, RULE_subjectSelectedInRelation = 15, 
		RULE_pluralObjectsExpression = 16, RULE_objectExpression = 17, RULE_selectedObject = 18, 
		RULE_objectSelectedByQuality = 19, RULE_objectSelectedInRelation = 20, 
		RULE_selectionAdjective = 21, RULE_relativeSelectionAdjective = 22, RULE_assertAdjective = 23, 
		RULE_timeExpression = 24, RULE_timeStep = 25, RULE_subject = 26, RULE_object = 27, 
		RULE_action = 28, RULE_importVariableLiteral = 29, RULE_runtimeVariableLiteral = 30, 
		RULE_integer = 31, RULE_float = 32;
	public static readonly string[] ruleNames = {
		"script", "storyHeader", "statement", "defineStatement", "defineSubject", 
		"commandStatement", "timeStatement", "actionStatement", "actionExpression", 
		"actionWithArguments", "objectArgument", "pluralSubjectsExpression", "subjectExpression", 
		"selectedSubject", "subjectSelectedByQuality", "subjectSelectedInRelation", 
		"pluralObjectsExpression", "objectExpression", "selectedObject", "objectSelectedByQuality", 
		"objectSelectedInRelation", "selectionAdjective", "relativeSelectionAdjective", 
		"assertAdjective", "timeExpression", "timeStep", "subject", "object", 
		"action", "importVariableLiteral", "runtimeVariableLiteral", "integer", 
		"float"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'REFER TO'", "'STORY ABOUT'", "'SHOULD BE'", 
		"'A'", "'THE'", "'AND'", "'AT'", "'AS'", "'OF'", "'TO'", "'HAD'", "'HAS'", 
		"'HAVE'", "'PASSED'", "'WAS'", "'WERE'", "'CLOSIEST'", "'FURTHEST'", "'RANDOM'", 
		"'STRONGEST'", "'UNIQUE'", "'WEAKEST'", "'MINUTES'", "'SECONDS'", "'*'", 
		"'/'", "'%'", "'+'", "'-'", "'='", "'>'", "'<'", "'!'", "'.'", "'('", 
		"')'", "','", "';'", "'@'", "'0'", "'1'", "'2'", "'''", "'\"'", "'`'", 
		"':'", "'$'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SPACE", "COMMENT", "COMMENT_INPUT", "LINE_COMMENT", "REFER_TO", 
		"STORY", "SHOULD_BE", "A", "THE", "AND", "AT", "AS", "OF", "TO", "HAD", 
		"HAS", "HAVE", "PASSED", "WAS", "WERE", "CLOSIEST", "FURTHEST", "RANDOM", 
		"STRONGEST", "UNIQUE", "WEAKEST", "MINUTES", "SECONDS", "STAR", "DIVIDE", 
		"MODULE", "PLUS", "MINUS", "EQUAL_SYMBOL", "GREATER_SYMBOL", "LESS_SYMBOL", 
		"EXCLAMATION_SYMBOL", "DOT", "LR_BRACKET", "RR_BRACKET", "COMMA", "SEMI", 
		"AT_SIGN", "ZERO_DECIMAL", "ONE_DECIMAL", "TWO_DECIMAL", "SINGLE_QUOTE_SYMB", 
		"DOUBLE_QUOTE_SYMB", "REVERSE_QUOTE_SYMB", "COLON_SYMB", "DOLLAR_SYMB", 
		"STRING_LITERAL", "DECIMAL_LITERAL", "REAL_LITERAL", "ID", "REVERSE_QUOTE_ID", 
		"ERROR_RECONGNIGION"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "StanleyParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static StanleyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public StanleyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public StanleyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ScriptContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StoryHeaderContext storyHeader() {
			return GetRuleContext<StoryHeaderContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			storyHeader();
			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 67;
				statement();
				}
				}
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 69805794224243488L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StoryHeaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STORY() { return GetToken(StanleyParser.STORY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjectContext @object() {
			return GetRuleContext<ObjectContext>(0);
		}
		public StoryHeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_storyHeader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStoryHeader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StoryHeaderContext storyHeader() {
		StoryHeaderContext _localctx = new StoryHeaderContext(Context, State);
		EnterRule(_localctx, 2, RULE_storyHeader);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			Match(STORY);
			State = 73;
			@object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DefineStatementContext defineStatement() {
			return GetRuleContext<DefineStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandStatementContext commandStatement() {
			return GetRuleContext<CommandStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 77;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case REFER_TO:
				EnterOuterAlt(_localctx, 1);
				{
				State = 75;
				defineStatement();
				}
				break;
			case A:
			case THE:
			case DOLLAR_SYMB:
			case STRING_LITERAL:
			case DECIMAL_LITERAL:
			case REAL_LITERAL:
			case ID:
				EnterOuterAlt(_localctx, 2);
				{
				State = 76;
				commandStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefineStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REFER_TO() { return GetToken(StanleyParser.REFER_TO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DefineSubjectContext defineSubject() {
			return GetRuleContext<DefineSubjectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS() { return GetToken(StanleyParser.AS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjectContext @object() {
			return GetRuleContext<ObjectContext>(0);
		}
		public DefineStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defineStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefineStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineStatementContext defineStatement() {
		DefineStatementContext _localctx = new DefineStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_defineStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			Match(REFER_TO);
			State = 80;
			defineSubject();
			State = 81;
			Match(AS);
			State = 82;
			@object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefineSubjectContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PluralSubjectsExpressionContext pluralSubjectsExpression() {
			return GetRuleContext<PluralSubjectsExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubjectExpressionContext subjectExpression() {
			return GetRuleContext<SubjectExpressionContext>(0);
		}
		public DefineSubjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_defineSubject; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefineSubject(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineSubjectContext defineSubject() {
		DefineSubjectContext _localctx = new DefineSubjectContext(Context, State);
		EnterRule(_localctx, 8, RULE_defineSubject);
		try {
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84;
				pluralSubjectsExpression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 85;
				subjectExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ActionStatementContext actionStatement() {
			return GetRuleContext<ActionStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TimeStatementContext timeStatement() {
			return GetRuleContext<TimeStatementContext>(0);
		}
		public CommandStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommandStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandStatementContext commandStatement() {
		CommandStatementContext _localctx = new CommandStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_commandStatement);
		try {
			State = 90;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case A:
			case THE:
			case DOLLAR_SYMB:
			case STRING_LITERAL:
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 88;
				actionStatement();
				}
				break;
			case DECIMAL_LITERAL:
			case REAL_LITERAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 89;
				timeStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TimeStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TimeExpressionContext[] timeExpression() {
			return GetRuleContexts<TimeExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TimeExpressionContext timeExpression(int i) {
			return GetRuleContext<TimeExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PASSED() { return GetToken(StanleyParser.PASSED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] AND() { return GetTokens(StanleyParser.AND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND(int i) {
			return GetToken(StanleyParser.AND, i);
		}
		public TimeStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_timeStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTimeStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TimeStatementContext timeStatement() {
		TimeStatementContext _localctx = new TimeStatementContext(Context, State);
		EnterRule(_localctx, 12, RULE_timeStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			timeExpression();
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AND) {
				{
				{
				State = 93;
				Match(AND);
				State = 94;
				timeExpression();
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 100;
			Match(PASSED);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PluralSubjectsExpressionContext pluralSubjectsExpression() {
			return GetRuleContext<PluralSubjectsExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WERE() { return GetToken(StanleyParser.WERE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ActionExpressionContext actionExpression() {
			return GetRuleContext<ActionExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubjectExpressionContext subjectExpression() {
			return GetRuleContext<SubjectExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WAS() { return GetToken(StanleyParser.WAS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HAVE() { return GetToken(StanleyParser.HAVE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HAS() { return GetToken(StanleyParser.HAS, 0); }
		public ActionStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionStatementContext actionStatement() {
		ActionStatementContext _localctx = new ActionStatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_actionStatement);
		int _la;
		try {
			State = 118;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102;
				pluralSubjectsExpression();
				State = 103;
				Match(WERE);
				State = 104;
				actionExpression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 106;
				subjectExpression();
				State = 107;
				_la = TokenStream.LA(1);
				if ( !(_la==WAS || _la==WERE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 108;
				actionExpression();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 110;
				pluralSubjectsExpression();
				State = 111;
				Match(HAVE);
				State = 112;
				actionExpression();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 114;
				subjectExpression();
				State = 115;
				_la = TokenStream.LA(1);
				if ( !(_la==HAS || _la==HAVE) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 116;
				actionExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ActionWithArgumentsContext actionWithArguments() {
			return GetRuleContext<ActionWithArgumentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public ActionExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionExpressionContext actionExpression() {
		ActionExpressionContext _localctx = new ActionExpressionContext(Context, State);
		EnterRule(_localctx, 16, RULE_actionExpression);
		try {
			State = 122;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120;
				actionWithArguments();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 121;
				action();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionWithArgumentsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjectArgumentContext objectArgument() {
			return GetRuleContext<ObjectArgumentContext>(0);
		}
		public ActionWithArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionWithArguments; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionWithArguments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionWithArgumentsContext actionWithArguments() {
		ActionWithArgumentsContext _localctx = new ActionWithArgumentsContext(Context, State);
		EnterRule(_localctx, 18, RULE_actionWithArguments);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			action();
			State = 125;
			objectArgument();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ObjectArgumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PluralObjectsExpressionContext pluralObjectsExpression() {
			return GetRuleContext<PluralObjectsExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TO() { return GetToken(StanleyParser.TO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AT() { return GetToken(StanleyParser.AT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ObjectExpressionContext objectExpression() {
			return GetRuleContext<ObjectExpressionContext>(0);
		}
		public ObjectArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_objectArgument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitObjectArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ObjectArgumentContext objectArgument() {
		ObjectArgumentContext _localctx = new ObjectArgumentContext(Context, State);
		EnterRule(_localctx, 20, RULE_objectArgument);
		int _la;
		try {
			State = 135;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==AT || _la==TO) {
					{
					State = 127;
					_la = TokenStream.LA(1);
					if ( !(_la==AT || _la==TO) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 130;
				pluralObjectsExpression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==AT || _la==TO) {
					{
					State = 131;
					_la = TokenStream.LA(1);
					if ( !(_la==AT || _la==TO) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
				}

				State = 134;
				objectExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
